Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/ResDeclOutsideTry.out
ResDeclOutsideTry.java:14:18: compiler.err.try.with.resources.expr.needs.var
1 error
